Mensaje para decir que hemos configurado todo correcto para subir al firebase hosting

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -31,6 +31,10 @@
                    <div class="content-data">
 
 <h1 id="cronometro">Cronometro</h1>
+<p><a href="https://travis-ci.org/npm-js-ts-angular-modules-course/proyecto-2c-crono"><img src="https://travis-ci.org/npm-js-ts-angular-modules-course/proyecto-2c-crono.svg?branch=master" alt="Build Status" class="img-responsive"></a>
+<a href="https://badge.fury.io/js/proyecto-2c-crono"><img src="https://badge.fury.io/js/proyecto-2c-crono.svg" alt="npm version" class="img-responsive"></a>
+<a href="https://coveralls.io/github/npm-js-ts-angular-modules-course/proyecto-2c-crono?branch=master"><img src="https://coveralls.io/repos/github/npm-js-ts-angular-modules-course/proyecto-2c-crono/badge.svg?branch=master" alt="Coverage Status" class="img-responsive"></a>
+<a href="https://github.com/npm-js-ts-angular-modules-course/proyecto-2c-crono"><img src="https://raw.githubusercontent.com/npm-js-ts-angular-modules-course/proyecto-2c-crono/master/documentation/images/coverage-badge-documentation.svg?sanitize=true" alt="Documentation" class="img-responsive"></a></p>
 <p>Un cronometro que cuenta y descuenta</p>
 <h2 id="instalaci-n">Instalación</h2>
 <div><pre class="line-numbers"><code class="language-none">npm install proyecto-2c-crono</code></pre></div><h2 id="uso">Uso</h2>
