--- a/documentation/miscellaneous/enumerations.html
+++ b/documentation/miscellaneous/enumerations.html
@@ -112,6 +112,16 @@
                                 &nbsp;SG_DIA
                             </td>
                         </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                &nbsp;UN_SG_ES_EN_MS
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                <i>Value : </i><code>1000</code>
+                            </td>
+                        </tr>
             </tbody>
         </table>
 </section>
